# get-math-done

./: .gitignore  CONTRIBUTING.md  README.md  TODO-publishing.md  package.json  pyproject.toml
infra/: gmd-conventions.json  gmd-protocols.json  gmd-state.json
src/gmd/: __init__.py  contracts.py
src/gmd/agents/: gmd-bibliographer.md  gmd-consistency-checker.md  gmd-debugger.md  gmd-executor.md  gmd-paper-writer.md  gmd-plan-checker.md  gmd-planner.md  gmd-referee.md  gmd-researcher.md  gmd-verifier.md
src/gmd/commands/: branch-hypothesis.md  compare-branches.md  execute-phase.md  health.md  new-project.md  plan-phase.md  resume-work.md  review-paper.md  verify-work.md  write-paper.md
src/gmd/core/: config.py  constants.py  conventions.py  git_ops.py  kernel.py  observability.py  phases.py  state.py
src/gmd/hooks/: statusline.py
src/gmd/mcp/: conventions_server.py  errors_server.py  patterns_server.py  protocols_server.py  state_server.py  verification_server.py
src/gmd/specs/references/orchestration/: agent-delegation.md
src/gmd/specs/references/protocols/: algebra-protocols.md  analysis-protocols.md  category-theory-protocols.md  combinatorics-protocols.md  number-theory-protocols.md  numerical-methods-protocols.md  probability-statistics-protocols.md  topology-geometry-protocols.md
src/gmd/specs/references/verification/: llm-math-errors.md
src/gmd/specs/workflows/: execute-phase-workflow.md
